@@ -1,13 +1,10 @@
 package io.xpipe.ext.base.browser;
 
-import com.sun.jna.platform.win32.Shell32;
-import com.sun.jna.platform.win32.WinUser;
 import io.xpipe.app.browser.BrowserEntry;
 import io.xpipe.app.browser.OpenFileSystemModel;
 import io.xpipe.app.browser.action.LeafAction;
+import io.xpipe.app.util.FileOpener;
 import io.xpipe.core.process.OsType;
-import io.xpipe.core.process.ShellControl;
-import io.xpipe.core.process.ShellDialect;
 import io.xpipe.core.store.FileKind;
 import javafx.scene.Node;
 import javafx.scene.input.KeyCode;
@@ -21,27 +18,8 @@ public class OpenFileWithAction implements LeafAction {
 
     @Override
     public void execute(OpenFileSystemModel model, List<BrowserEntry> entries) throws Exception {
-        switch (OsType.getLocal()) {
-            case OsType.Windows windows -> {
-                Shell32.INSTANCE.ShellExecute(
-                        null,
-                        "open",
-                        "rundll32.exe",
-                        "shell32.dll,OpenAs_RunDLL "
-                                + entries.get(0).getRawFileEntry().getPath(),
-                        null,
-                        WinUser.SW_SHOWNORMAL);
-            }
-            case OsType.Linux linux -> {
-                ShellControl sc = model.getFileSystem().getShell().get();
-                ShellDialect d = sc.getShellDialect();
-                sc.executeSimpleCommand("mimeopen -a "
-                        + d.fileArgument(entries.get(0).getRawFileEntry().getPath()));
-            }
-            case OsType.MacOs macOs -> {
-                throw new UnsupportedOperationException();
-            }
-        }
+        var e = entries.getFirst();
+        FileOpener.openWithAnyApplication(e.getRawFileEntry());
     }
 
     @Override
@@ -56,9 +34,7 @@ public class OpenFileWithAction implements LeafAction {
 
     @Override
     public boolean isApplicable(OpenFileSystemModel model, List<BrowserEntry> entries) {
-        var os = model.getFileSystem().getShell();
-        return os.isPresent()
-                && os.get().getOsType().equals(OsType.WINDOWS)
+        return !OsType.getLocal().equals(OsType.MACOS)
                 && entries.size() == 1
                 && entries.stream().allMatch(entry -> entry.getRawFileEntry().getKind() == FileKind.FILE);
     }
